fixes page overflow for textboxes and video tag

--- a/src/css/freelancer.css
+++ b/src/css/freelancer.css
@@ -84,10 +84,10 @@ hr.star-primary:after {
   padding: 0;
 }
 #myReadable {
-  margin-top: 190px;
+  _float: left;
 }
 #myWritable {
-  margin-top: 190px;
+  _float: right;
 }
 #myWritable ul li {
   display: block;
@@ -120,17 +120,29 @@ hr.star-primary:after {
 #myWritable2 select {
   width: 300px;
 }
+.blur {
+  opacity: 0.3;
+  -webkit-filter: blur(1px);
+  -moz-filter: blur(1px);
+  -ms-filter: blur(1px);
+  -o-filter: blur(1px);
+  filter: blur(1px);
+}
 #textValue {
-  width: 320px;
+  width: 100%;
   margin: 0 auto;
 }
 #cdSiteSeal2 {
   margin: 0 auto;
 }
+#myVideo {
+  margin: 0 auto;
+  width: 70%    !important;
+  height: auto   !important;
+}
 #camPicture {
   position: relative;
-  padding-bottom: 60px;
-  height: 0;
+  _padding-bottom: 60px;
 }
 #camPicture iframe {
   position: absolute;
@@ -410,15 +422,6 @@ footer .footer-below {
 .btn:active,
 .btn.active {
   outline: none;
-}
-.blur {
-  width: 100%;
-  height: 100%;
-  -webkit-filter: blur(4px);
-  -moz-filter: blur(4px);
-  -ms-filter: blur(4px);
-  -o-filter: blur(4px);
-  filter: blur(4px);
 }
 .scroll-top {
   position: fixed;
